force-app/main/default/objects/JBCXM__CSTask__c/JBCXM__CSTask__c.object-meta.xml
<CustomObject>
    <label>CSTask</label>
    <nameField>
        <label>Related Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSTasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>