force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__Assigned__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSTasks</relationshipName>
    <type>Lookup</type>
</CustomField>