force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ClosedDate__c</fullName>
    <description>Closed date of CSTask</description>
    <label>ClosedDate</label>
    <type>Date</type>
</CustomField>