force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__Date__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>