force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayOrder__c</fullName>
    <description>Contains value defined playbook.This is applicable when a task is from a playbook.</description>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>