force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__GSClosedOverdue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSClosedOverdue__c</fullName>
    <formula>IF( JBCXM__ClosedDate__c &gt;  JBCXM__Date__c , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Overdue</label>
    <type>Checkbox</type>
</CustomField>