force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__GSDaysPastDueDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSDaysPastDueDate__c</fullName>
    <formula>IF( JBCXM__Date__c &lt; TODAY() , TODAY() - JBCXM__Date__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>