force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__GSDaysToClose__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSDaysToClose__c</fullName>
    <formula>IF( ISBLANK(JBCXM__ClosedDate__c) ,  TODAY() -  DATEVALUE(CreatedDate) , JBCXM__ClosedDate__c - DATEVALUE(CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>