force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__GSDaysUntilClose__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSDaysUntilClose__c</fullName>
    <formula>IF(ISBLANK( JBCXM__ClosedDate__c ),  JBCXM__Date__c - TODAY() , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>