force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__GSOverdue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSOverdue__c</fullName>
    <formula>IF( JBCXM__Date__c &lt; TODAY() , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>