force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__IsClosed__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsClosed__c</fullName>
    <formula>NOT(ISNULL(JBCXM__ClosedDate__c))</formula>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>