force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__IsEmailSent__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether email is sent from Cockpit for this task.</description>
    <label>Is Email Sent</label>
    <type>Checkbox</type>
</CustomField>