force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__IsImp__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsImp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsImp</label>
    <type>Checkbox</type>
</CustomField>