force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__OriginalDueDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OriginalDueDate__c</fullName>
    <label>Original Due Date</label>
    <type>Date</type>
</CustomField>