force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__Parent__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>JBCXM__CSTask__c</referenceTo>
    <relationshipLabel>Depedent tasks</relationshipLabel>
    <relationshipName>DepedentTasks</relationshipName>
    <type>Lookup</type>
</CustomField>