force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RelatedRecordId__c</fullName>
    <label>Related Record Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>