force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__SkipOption__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SkipOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skip Option</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>CSTask Due Date Skip Option</relationshipLabel>
    <relationshipName>CSTask_DueDateSkipOption</relationshipName>
    <type>Lookup</type>
</CustomField>