force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__Source__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Source__c</fullName>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>