force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__Subject__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>