force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__TaskReference__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TaskReference__c</fullName>
    <description>This field is not using actively in the product. This is used for cockpit migration.</description>
    <label>Task Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>