force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__TimelineActivityId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TimelineActivityId__c</fullName>
    <description>ID  of the email activity created in timeline</description>
    <label>Timeline Activity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>