force-app/main/default/objects/JBCXM__CSTask__c/fields/JBCXM__ToEmailType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ToEmailType__c</fullName>
    <description>Type(Contact/User/Manual)of To email address used to send email.</description>
    <label>To Email Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>