force-app/main/default/objects/JBCXM__CSTask__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>JBCXM__Subject__c</columns>
    <columns>NAME</columns>
    <columns>JBCXM__Account__c</columns>
    <columns>JBCXM__Assigned__c</columns>
    <columns>JBCXM__Date__c</columns>
    <columns>JBCXM__Priority__c</columns>
    <columns>JBCXM__Status__c</columns>
    <columns>JBCXM__RelatedRecordId__c</columns>
    <columns>JBCXM__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>